tests/parser/command_form/invalid_07.m
% (c) Copyright 2019 Florian Schanda

function invalid_07()
    kitten = 42;
    potato + kitten % var, but unknwon
end
